<resources>
    <string name="app_name">StudentHelper</string>

    <!-- Placeholders -->
    <string name="icon">Icon</string>
    <string name="button">Button</string>
    <string name="separator">Separator</string>
    <string name="placeholder">Placeholder</string>
    <string name="image">Image</string>
    <string name="retry">RETRY</string>
    <string name="internal_storage">Internal storage</string>
    <string name="button_sure_default" translatable="false">Done</string>

    <string-array name="branch_array">
        <item>Electrical Engineering </item>
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item>Civil Engineering</item>
        <item>Electronics Engineering</item>
        <item>Mechanical Engineering</item>
    </string-array>

    <string-array name="semester_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="section_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <!-- Progress Loader -->
    <string name="default_loading_message">Please wait…</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>

    <!-- LOGIN SCREEN-->
    <string name="choose_account_type">Choose your account type</string>
    <string name="student_label">Student</string>
    <string name="teacher_label">Teacher</string>
    <string name="admin_label">Admin</string>
    <string name="select_account_type">Please select your account type first.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="introduction_text">
        Hello there!!.
        <br>
           \n Let\'s start exploring your college app.
        </br>
        <br>
           \n Login below to get started.
        </br>
    </string>

    <!-- ADD USER DETAILS SCREEN-->
    <string name="personal_info">Personal Info</string>
    <string name="age_hint">Enter your Age</string>
    <string name="branch_hint">Enter your Branch</string>
    <string name="section_hint">Enter your Section</string>
    <string name="semester_hint">Enter your Semester</string>
    <string name="skills_hint">Enter your Skills</string>
    <string name="subject_hint">Enter Subjects Here</string>
    <string name="submit_details">Submit Details</string>

    <!-- SELECTION SCREEN -->
    <string name="select_choice">Choose one of the following</string>

    <!-- PROJECT SCREEN -->
    <string name="project_label">PROJECT</string>
    <string name="get_all_project">All Projects</string>
    <string name="member_label">Members :- </string>
    <string name="dummy_member">1. Mehul Tyagi \n2. Aakansha \n3. Siddharth</string>
    <string name="coordinator_label">Co-ordinator :- </string>
    <string name="dummy_coordinator">Aditya Tyagi</string>
    <string name="deadline_label">Deadline :- </string>
    <string name="updated_progress_label">Updated progress :- </string>
    <string name="dummy_deadline">25,March 2020</string>
    <string name="progress_label">Progress :- </string>
    <string name="update_progress">Update Progress</string>
    <string name="assign_project">Assign Project</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_project_title">Enter Project Title</string>
    <string name="enter_project_description">Enter Project Description</string>

    <string name="notification_send">Send notification</string>
    <string name="notification_create">Create notification</string>
    <string name="notification_title_label">Notification Title :- </string>
    <string name="notification_desc_label">Notification Description :- </string>


    <!-- PLACEMENT SCREEN -->
    <string name="placement_label">PLACEMENT</string>
    <string name="starts_on_text">Starts on</string>
    <string name="go_Live">Placement Drive is Ongoing right now</string>
    <string name="register_btn_text">Register Now</string>
    <string name="registered_text">Registered</string>
    <string name="live_companies">Live Companies</string>
    <string name="upcoming_companies">Upcoming Companies</string>
    <string name="past_companies">Past Companies</string>
    <string name="class_date_format">%s, %s %s</string>

    <!-- Chat Screen -->
    <string name="write_a_chat_message">Chat with teacher</string>

    <!-- Application -->
    <string name="no_internet">No internet connection</string>

    <!-- Permission -->
    <string name="please_allow_permission">Please allow permissions</string>
    <string name="turn_on">Turn On</string>
    <string name="exit">EXIT</string>

    <!--Error-->
    <string name="cancelled">Cancelled</string>

    <!-- Popup -->
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="question_deleted">Question deleted successfully</string>

    <!-- Image picker -->
    <string name="no_image_selected">No Image Selected</string>

    <!-- Confirmation -->
    <string name="close">Close</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip">Skip</string>

    <!-- Instruction -->
    <string name="instructions">Instructions</string>
    <string name="ok">OK</string>

    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="dismiss_caps">DISMISS</string>

    <string name="view_more_button">VIEW MORE</string>
    <string name="or">or</string>

    <string name="we_need_your_permissions">We need\nyour permissions!</string>

    <!-- ADMIN -->
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_company_website">Enter Company Website</string>
    <string name="enter_company_logo">Enter Company Logo URL</string>
    <string name="enter_job_title">Enter Job Title</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="enter_job_place">Enter Job Place</string>
    <string name="enter_skill_name">Enter Skill Name</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="add">ADD</string>
    <string name="add_branch">ADD BRANCH</string>
    <string name="add_company">ADD COMPANY</string>
    <string name="add_job">ADD JOB</string>
    <string name="add_skill">ADD SKILL</string>
    <string name="add_subject">ADD SUBJECT</string>
    <string name="submit">Submit</string>
    <string name="add_date_time">Add Job Date and Time</string>
    <string name="dummy_time">22/09/2019</string>
    <string name="time_label">Time :</string>
    <string name="date_format">dd/mm/yyyy</string>
</resources>
