<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16_dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etSubjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/enter_subject_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/enter_subject_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddSubject"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16_dp"
        android:background="@drawable/bg_rounded_corner"
        android:text="@string/add_subject"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSubjectName" />


    <ImageView
        android:id="@+id/ivCompany"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddSubject" />
</androidx.constraintlayout.widget.ConstraintLayout>