<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAddBranch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_medium"
    android:padding="@dimen/padding_16_dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etBranch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/enter_branch_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/enter_branch_name" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteSubjects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_micro"
        android:layout_marginTop="@dimen/padding_16_dp"
        android:backgroundTint="@color/dark_grey"
        android:completionThreshold="1"
        android:drawableEnd="@drawable/ic_add_circle"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/subject_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBranch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteSubjects"
        app:spanCount="3"
        tools:itemCount="3"
        tools:listitem="@layout/cell_generic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddBranch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16_dp"
        android:background="@drawable/bg_rounded_corner"
        android:text="@string/add_branch"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvSubjects" />

    <ImageView
        android:id="@+id/ivBranch"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_branch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddBranch" />

</androidx.constraintlayout.widget.ConstraintLayout>