<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAssignProjectContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_small"
    android:padding="@dimen/padding_16_dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etProjectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/enter_project_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/enter_project_title" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etProjectDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/enter_project_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProjectTitle"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/enter_project_description" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/enter_student_name"
        android:completionThreshold="1"
        android:drawableEnd="@drawable/ic_add_circle"
        android:drawablePadding="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProjectDescription"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteUser"
        app:spanCount="5"
        tools:itemCount="3"
        tools:listitem="@layout/cell_generic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16_dp"
        android:background="@drawable/bg_rounded_corner"
        android:paddingStart="@dimen/padding_huge"
        android:paddingEnd="@dimen/padding_huge"
        android:text="@string/assign_project"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/tvAddDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvUsers" />

    <TextView
        android:id="@+id/tvAddDateTime"
        style="@style/Text.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_outlined"
        android:padding="@dimen/padding_medium"
        android:text="Enter the date"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="@id/btnAddProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddProject"
        app:layout_constraintTop_toTopOf="@id/btnAddProject" />

    <ImageView
        android:id="@+id/ivProject"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddProject" />

</androidx.constraintlayout.widget.ConstraintLayout>