<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLoginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvLoginType"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/choose_account_type"
        android:textColor="@color/collect_blue"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_huge"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginType"
        tools:itemCount="1"
        tools:listitem="@layout/cell_login_card" />

    <TextView
        android:id="@+id/tvIntroductionText"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_huge"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/introduction_text"
        android:textColor="@color/subject_grey"
        app:layout_constraintBottom_toTopOf="@id/googleSignInTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvLogin" />


    <TextView
        android:id="@+id/googleSignInTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_huge"
        android:background="@drawable/bg_button_google_login"
        android:drawableStart="@drawable/ic_google_icon_new"
        android:drawablePadding="@dimen/padding_normal"
        android:elevation="@dimen/padding_nano"
        android:gravity="center"
        android:padding="@dimen/padding_normal"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntroductionText" />

    <ImageView
        android:id="@+id/ivCollegeImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_big"
        android:alpha="0.5"
        android:contentDescription="@string/image"
        android:padding="@dimen/padding_small"
        android:src="@drawable/bg_college"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleSignInTv" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntroductionText" />

</androidx.constraintlayout.widget.ConstraintLayout>